frontend-public/src/styles/pages/contact.css
.contact {
  padding: 2em;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.contact h2 {
  margin: 0;
  margin-bottom: 0.25rem;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 600;
  line-height: 120%;
  letter-spacing: -0.03em;
}
.contact h3 {
  font-size: 1.25em;
  font-weight: 400;
  line-height: 120%;
  font-style: normal;
}
.gray {
  background-color: #f5f5f5;
}
.white {
  background-color: #fff;
}
.details-form {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  width: 100%;
  justify-content: center;
}
.padded-subtitle {
  margin: 0;
  margin-bottom: 2rem;
}
.inq-subtitle {
  margin: 0;
  margin-bottom: 0.75rem;
}
.medalion-group {
  display: flex;
  flex-direction: row;
  gap: 15.938rem;
  justify-content: center;
  width: 100%;
}
.contact-medalions {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}
.contact-map-wrapper {
  display: flex;
  gap: 0.5rem;
  height: 1rem;
  width: 100%;
  align-items: center;
  justify-content: center;
  margin-top: 1rem;
}
.contact-map {
  background: yellow;
  width: 100%;
  height: 18.75rem;
}
.details-form .card {
  background-color: #fff;
}

